// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`npm package resource e2e npm package resource test: NPMPackage create 1`] = `
Object {
  "_message": "Installed NPM package is-sorted@1.0.0",
  "id": "is-sorted",
  "name": "is-sorted",
  "version": "1.0.0",
}
`;

exports[`npm package resource e2e npm package resource test: NPMPackage create plan 1`] = `
Object {
  "currentState": undefined,
  "describe": "Install is-sorted@1.0.0",
  "newState": "is-sorted@1.0.0",
}
`;

exports[`npm package resource e2e npm package resource test: NPMPackage destroy 1`] = `
Object {
  "_message": "Installed NPM package is-sorted@1.0.2",
  "id": "is-sorted",
  "name": "is-sorted",
  "version": "1.0.2",
}
`;

exports[`npm package resource e2e npm package resource test: NPMPackage update 1`] = `
Object {
  "_message": "Installed NPM package is-sorted@1.0.2",
  "id": "is-sorted",
  "name": "is-sorted",
  "version": "1.0.2",
}
`;

exports[`npm package resource e2e npm package resource test: NPMPackage update plan 1`] = `
Object {
  "currentState": "is-sorted@1.0.0",
  "describe": "Install is-sorted@1.0.2",
  "newState": "is-sorted@1.0.2",
}
`;

exports[`package manager client commands generates the correct commands for npm 1`] = `
Array [
  "install",
  "gatsby",
]
`;

exports[`package manager client commands generates the correct commands for npm 2`] = `
Array [
  "install",
  "--save-dev",
  "eslint",
]
`;

exports[`package manager client commands generates the correct commands for yarn 1`] = `
Array [
  "add",
  "-W",
  "gatsby",
]
`;

exports[`package manager client commands generates the correct commands for yarn 2`] = `
Array [
  "add",
  "-W",
  "--dev",
  "eslint",
]
`;
